--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Xcode
-#
-# gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+/dev/
+
+# macOS
+.DS_Store
 
 ## Build generated
 build/
@@ -32,12 +34,15 @@ xcuserdata/
 timeline.xctimeline
 playground.xcworkspace
 
+## SPM support in Xcode
+.swiftpm
+
 # Swift Package Manager
 #
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
-# Packages/
-# Package.pins
-# Package.resolved
+Packages/
+Package.pins
+Package.resolved
 .build/
 
 # CocoaPods
@@ -45,8 +50,8 @@ playground.xcworkspace
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
-#
-# Pods/
+
+Pods/
 
 # Carthage
 #
