--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Build
-      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,name=Any Mac"
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,name=Any Mac" | xcpretty && exit ${PIPESTATUS[0]}
     - name: Unit Tests
-      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS"
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS" | xcpretty && exit ${PIPESTATUS[0]}
 
   macOS-12:
     name: macOS 12 Monterey
@@ -39,19 +39,29 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Build
-      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,name=Any Mac"
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,name=Any Mac" | xcpretty && exit ${PIPESTATUS[0]}
     - name: Unit Tests
-      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS"
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS" | xcpretty && exit ${PIPESTATUS[0]}
 
+  macOS-13:
+    name: macOS 13 Ventura
+    runs-on: macos-13
+    steps:
+    - uses: actions/checkout@main
+    - name: Build
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,name=Any Mac" | xcpretty && exit ${PIPESTATUS[0]}
+    - name: Unit Tests
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS" | xcpretty && exit ${PIPESTATUS[0]}
+      
   macCatalyst:
     name: macCatalyst
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@main
     - name: Build
-      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,variant=Mac Catalyst,name=Any Mac"
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=macOS,variant=Mac Catalyst,name=Any Mac" | xcpretty && exit ${PIPESTATUS[0]}
     - name: Unit Tests
-      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS,variant=Mac Catalyst"
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=macOS,variant=Mac Catalyst" | xcpretty && exit ${PIPESTATUS[0]}
 
   iOS:
     name: iOS
@@ -59,9 +69,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: iPhone 12 Simulator - Build
-      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=iOS Simulator,name=Any iOS Device"
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=iOS Simulator,name=Any iOS Device" | xcpretty && exit ${PIPESTATUS[0]}
     - name: iPhone 12 Simulator - Unit Tests
-      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=iOS Simulator,name=iPhone 12"
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=iOS Simulator,name=iPhone 12" | xcpretty && exit ${PIPESTATUS[0]}
 
   tvOS:
     name: tvOS
@@ -69,9 +79,9 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: Apple TV - Build
-      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=tvOS Simulator,name=Any tvOS Simulator Device"
+      run: xcodebuild build -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "generic/platform=tvOS Simulator,name=Any tvOS Simulator Device" | xcpretty && exit ${PIPESTATUS[0]}
     - name: Apple TV - Unit Tests
-      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=tvOS Simulator,name=Apple TV 4K (2nd generation)"
+      run: xcodebuild test -workspace ".swiftpm/xcode/package.xcworkspace" -scheme "PListKit-CI" -destination "platform=tvOS Simulator,name=Apple TV 4K (2nd generation)" | xcpretty && exit ${PIPESTATUS[0]}
 
 
 # xcodebuild test reference:
