--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,7 +88,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
-    - name: Boostrap Platforms
+    - name: Bootstrap Platforms
       # Workaround for Xcode/GitHub runner issues finding simulators.
       # see https://github.com/actions/runner-images/issues/12758#issuecomment-3206748945
       run: xcrun simctl list
@@ -132,7 +132,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
-    - name: Boostrap Platforms
+    - name: Bootstrap Platforms
       # Workaround for Xcode/GitHub runner issues finding simulators.
       # see https://github.com/actions/runner-images/issues/12758#issuecomment-3206748945
       run: xcrun simctl list
@@ -176,7 +176,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: latest-stable
-    - name: Boostrap Platforms
+    - name: Bootstrap Platforms
       # Workaround for Xcode/GitHub runner issues finding simulators.
       # see https://github.com/actions/runner-images/issues/12758#issuecomment-3206748945
       run: xcrun simctl list
